nelisquare (0.5.0) stable; urgency=low
  * <Add change description here>

 -- Basil Semuonov <basil.semuonov@gmail.com>  Mon, 29 Apr 2013 11:05:26 +0400

nelisquare (0.4.10) stable; urgency=low
  * [in-dev] dialogs updates
  * background mode added
  * bug fixes

 -- Basil Semuonov <basil.semuonov@gmail.com>  Sat, 15 Dec 2012 02:01:13 +0400

nelisquare (0.4.9) stable; urgency=low
  * notifications at home screen
  * homescreen feed integration
  * awesome toolbars & menus
  * settings page update
  * bug fixes

 -- Basil Semuonov <basil.semuonov@gmail.com>  Fri, 14 Dec 2012 14:09:38 +0400

nelisquare (0.4.8) stable; urgency=low
  * api key changed
  * feed updates & all latest checkins
  * pan&pinch on maps and full photos
  * new theming engine & api update
  * bug fixes, layout updates

 -- Basil Semuonov <basil.semuonov@gmail.com>  Mon, 03 Dec 2012 20:51:15 +0400

nelisquare (0.4.7) stable; urgency=low
  * tips support
  * unreaded notifications marked
  * dark theme (beta)
  * user profile updates
  * venuemap page, route to venue (beta)
  * layout updates, batch loading of stuff

 -- Basil Semuonov <basil.semuonov@gmail.com>  Wed, 07 Nov 2012 23:00:00 +0400

nelisquare (0.4.6) stable; urgency=low
  * likes, comments count preview at checkin feed and history
  * checkins feed autoupdate
  * gps uplock timeout
  * notification fixes
  * Molo.me integration is supported. Make cool photos for upload at nelisquare with one click.
  * photo swype while at venue gallery.
  * layout and theme updates

 -- Basil Semuonov <basil.semuonov@gmail.com>  Mon, 29 Oct 2012 22:33:43 +0400

nelisquare (0.4.5) stable; urgency=low
  * layout and theme updates
  * photos browser at venues added.
  * pages now holds their data w/o reloads.
  * core window and objects updates.

 -- Basil Semuonov <basil.semuonov@gmail.com>  Thu, 25 Oct 2012 15:07:44 +0400

nelisquare (0.4.4) stable; urgency=low
  * likes on checkins, venues added
  * user mayorships, checkins lists added