@@ -1,5 +1,7 @@
 nelisquare (0.5.0) stable; urgency=low
-  * <Add change description here>
+  * Back to action!
+  * Something may be broken
+  * Photo uploads not working yet
 
  -- Basil Semuonov <basil.semuonov@gmail.com>  Mon, 29 Apr 2013 11:05:26 +0400
 
